# quantum-number

./: .gitignore  CLAIM_OF_ORIGIN.md  COLLAPSER_SPEC.md  COMPARISON_TO_EXISTING_SYSTEMS.md  CRYPTOCURRENCY_SECURITY_ANALYSIS.md  GLOSSARY.md  INSTITUTIONAL_RISK_ASSESSMENT_FRAMEWORK.md  NOTICE  PERFORMANCE_IMPROVEMENT_SUMMARY.md  PERFORMANCE_TEST_DEMONSTRATION.md  PRIOR_ART.md  QNGPU_DESIGN.md  QUANTIX_ECC_DESIGN.md  QUANTIX_PRIOR_ART.md  QUANTIX_TWISTED_CURVE_ANALYSIS.md  QUANTIX_ULTRASCALE_MAP_DESIGN.md  QUANTIX_ULTRASCALE_MAP_PERSISTENT_DESIGN.md  QUANTIX_X64_COMPATIBILITY_DESIGN.md  QUANTUM_AI.md  QUANTUM_AST_SPEC.md  QUANTUM_FS.md  QUANTUM_NUMBER_MATH_LIB.md  QUANTUM_NUMBER_SPEC.md  QUANTUM_NUMBER_UNIVERSAL_THEORY.md  QUANTUM_NUMBER_V8_1_3_PLUS_2_3_DEMO_REPORT.md  QUANTUM_NUMBER_V8_1_3_PLUS_2_3_NEW_DEMO_REPORT.md  QUANTUM_NUMBER_V8_BITWISE_COMPARISON_REPORT.md  QUANTUM_NUMBER_V8_FRACTION_ADDITION_DESIGN.md  QUANTUM_NUMBER_V8_FRACTION_DEMO_REPORT.md  QUANTUM_OS.md  QUANTUM_OS_ADVANCED_IMPLEMENTATION.md  QUANTUM_OS_IMPLEMENTATION.md  QUANTUM_PHYSICS.md  README.md  README2.md  SECP256K1_ECC_IMPLEMENTATION_SERIES.md  SECP256K1_ECC_V2_IMPLEMENTATION.md  THEORY.md  UNIFIED_THEORY_OF_EVERYONE.md  VISION.md  (+11 more)
.github/workflows/: masm-build.yml
cline-memory/: debug-log.md  observations.md  plan.md  tests.md  todo.md
docs/: g256-chip-design.md  x256-assembly.md  x256-chip-design.md  x256-memory-model.md
quantix/kernel/: quantix_crypto_research.h  quantix_general_os.h  quantix_hypervisor.h  quantix_native_ecc.h  quantix_nlp_chat.h  quantix_qn_emulation.h  quantix_twisted_curves.h  quantix_x64_hal.h
quantum-number/: .project  pom.xml
quantum-number-v2/: CMakeLists.txt  build_test.bat  quantum_number_electron.asm  test_quantum_electron.asm
quantum-number/src/main/masm/: QuantumNumberV8.masm  QuantumNumberV8Edition2.masm  QuantunNumberV8.masm  build_demo_addition_1_3_plus_2_3.bat  build_demo_addition_1_3_plus_2_3_bitwise.bat  build_quantum_number_v8.bat  build_quantum_number_v8_1_3_plus_2_3_bitwise_demo.bat  build_quantum_number_v8_1_3_plus_2_3_new_bitwise_demo.bat  build_quantum_number_v8_1_3_plus_2_3_new_demo.bat  build_quantum_number_v8_1_3_plus_2_3_traditional_demo.bat  build_quantum_number_v8_ai_demo.bat  build_quantum_number_v8_bitwise_demo.bat  (+21 more)
quantum-os/: Makefile
quantum-os/kernel/: kernel.c  kernel.h  memory.c  memory.h  posix_compat.c  posix_compat.h  process.c  process.h  qngpu_driver.h  quantix_bip39.c  quantix_bip39.h  quantix_ecc.c  quantix_ecc.h  quantix_qfs.c  quantix_qfs.h  quantix_qfs_advanced.c  quantix_qfs_advanced.h  quantix_qfs_ast.c  quantix_scheduler.c  quantix_scheduler.h  quantix_ultrascale_map.c  quantix_ultrascale_map.h  quantix_ultrascale_map_persistent.c  quantix_ultrascale_map_persistent.h  quantum_device_manager.h  quantum_error_handler.h  quantum_file_operations.c  quantum_file_operations.h  quantum_gaming.c  quantum_gaming.h  quantum_graphics.h  quantum_io_manager.h  quantum_memory_manager.c  quantum_memory_manager.h  quantum_network_manager.h  quantum_number.c  quantum_number.h  quantum_office.h  quantum_performance_optimizer.c  quantum_performance_optimizer.h  (+9 more)
quantum-os/test/: quantix_ecc_test.c  quantix_qfs_test.c  quantix_scheduler_test.c  quantix_ultrascale_map_persistent_test.c  quantix_ultrascale_map_test.c  quantum_integration_test.c  quantum_performance_optimizer_test.c
(+132 files in other folders)
